# Cognitive-Scaffolding

./: .gitignore  AGENTS.md  Architecture overview.rb  CLA.md  CLI_Ref.md  CONTRIBUTING.md  FEATURES.md  LICENSE  Process Flow  QAT_Quickstart.md  Quick_Ref.md  README.md  TASKS.md  VISION.md  ast_deps.csv  batch_ops.py  clustering.py  combine_scripts.py  demo_script.py  llama_test.py  pyproject.toml  pytest.ini  requirements.txt  test_script.py  transformers_test.py
Combined_Scripts/: .combined.py  cli.combined.py  core.clustering.combined.py  core.config.combined.py  core.embeddings.combined.py  core.llm.combined.py  core.parsing.combined.py  core.utils.combined.py  core.workflows.combined.py  src.cli.combined.py  src.combined.py  src.core.analysis.combined.py  src.core.combined.py  src.core.config.combined.py  src.core.embeddings.combined.py  src.core.llm.combined.py  src.core.memory.combined.py  src.core.metadata.combined.py  src.core.parsing.combined.py  src.core.retrieval.combined.py  src.core.storage.combined.py  src.core.synthesis.combined.py  src.core.utils.combined.py  src.core.vectorstore.combined.py  src.core.workflows.combined.py  src.scripts.combined.py  src.tools.combined.py
cli/: batch_ops.py  classification.py  classify.py  cluster.py  clustering.py  embed.py  main.py  main_commands.py  organize.py  pipeline.py  upload_utils.py
config/: path_config.py  remote_config.py
docs/: QAT_Quickstart.md
graph_tools/: method_graph.py  variable_graph.py
intents/: 2024-06-09__consolidate_schema_config.intent.md  2025-06-30__memory_summarizer.intent.md  2025-07-09__frame_store_refactor.intent.md  2025-07-09__retriever_multi_query.intent.md  2025-07-12__filter_nonstring.intent.md  2025-09-20__config_fallback.intent.md  2025-09-21__pipeline_recursive_upload.intent.md  2025-10-06__clustering_safety.intent.md  2025-10-16__embedding_batch_performance.intent.md
purpose_files/: cli.dedup.purpose.md  cli.pipeline.purpose.md  cli_combined.purpose.md  core.constants.purpose.md  (+31 more)
(+197 files in other folders)
